# aimodel-cli

./: .gitignore  CHANGELOG.md  LICENSE  README.ja.md  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
src/aimodel_cli/: __init__.py  main.py
src/aimodel_cli/api/: __init__.py  client.py
src/aimodel_cli/commands/: config.py  download.py  info.py  metadata.py  search.py  update.py
src/aimodel_cli/config/: __init__.py  settings.py
src/aimodel_cli/download/: __init__.py  downloader.py
src/aimodel_cli/models/: __init__.py  model_info.py
src/aimodel_cli/utils/: __init__.py  formatting.py  report.py
